[package]
name = "lexicon"
version = "0.1.0"
edition = "2021"

[features]
default = ["fm_teal"]
fm_teal = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jacquard-common = "0.9"
jacquard-derive = "0.9"
jacquard-lexicon = "0.9"
unicode-segmentation = "1"
rustversion = "1"
